@@ -20,11 +20,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/junit/junit/3.8.1/junit-3.8.1.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/junit/junit/3.8.1/junit-3.8.1.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/junit/junit/3.8.1/junit-3.8.1.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -33,11 +29,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/checkstyle/checkstyle-optional/4.1/checkstyle-optional-4.1.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/nekohtml/nekohtml/0.9.1/nekohtml-0.9.1.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/nekohtml/nekohtml/0.9.1/nekohtml-0.9.1.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -46,11 +38,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/nekohtml/nekohtml/0.9.1/nekohtml-0.9.1.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/checkstyle/checkstyle-optional/4.1/checkstyle-optional-4.1.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/checkstyle/checkstyle-optional/4.1/checkstyle-optional-4.1.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -59,11 +47,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/org/hibernate/hibernate/3.2.0.cr3/hibernate-3.2.0.cr3.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/org/hibernate/hibernate/3.2.0.cr3/hibernate-3.2.0.cr3.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/org/hibernate/hibernate/3.2.0.cr3/hibernate-3.2.0.cr3.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -72,11 +56,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/rhino/js/1.5R4.1/js-1.5R4.1.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/rhino/js/1.5R4.1/js-1.5R4.1.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/rhino/js/1.5R4.1/js-1.5R4.1.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -85,11 +65,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/javax/servlet/servlet-api/2.4/servlet-api-2.4.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/javax/servlet/servlet-api/2.4/servlet-api-2.4.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/javax/servlet/servlet-api/2.4/servlet-api-2.4.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -98,11 +74,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -111,11 +83,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/commons-collections/commons-collections/2.1/commons-collections-2.1.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/commons-collections/commons-collections/2.1/commons-collections-2.1.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/commons-collections/commons-collections/2.1/commons-collections-2.1.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -124,11 +92,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/dom4j/dom4j/1.6.1/dom4j-1.6.1.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/dom4j/dom4j/1.6.1/dom4j-1.6.1.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/dom4j/dom4j/1.6.1/dom4j-1.6.1.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -137,11 +101,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/cglib/cglib/2.1_3/cglib-2.1_3.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/cglib/cglib/2.1_3/cglib-2.1_3.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/cglib/cglib/2.1_3/cglib-2.1_3.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -150,11 +110,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/asm/asm-attrs/1.5.3/asm-attrs-1.5.3.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/asm/asm-attrs/1.5.3/asm-attrs-1.5.3.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/asm/asm-attrs/1.5.3/asm-attrs-1.5.3.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -163,11 +119,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/checkstyle/checkstyle/4.1/checkstyle-4.1.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/checkstyle/checkstyle/4.1/checkstyle-4.1.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/checkstyle/checkstyle/4.1/checkstyle-4.1.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -176,11 +128,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/jtidy/jtidy/4aug2000r7-dev/jtidy-4aug2000r7-dev.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/jtidy/jtidy/4aug2000r7-dev/jtidy-4aug2000r7-dev.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/jtidy/jtidy/4aug2000r7-dev/jtidy-4aug2000r7-dev.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -189,11 +137,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/asm/asm/1.5.3/asm-1.5.3.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/asm/asm/1.5.3/asm-1.5.3.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/asm/asm/1.5.3/asm-1.5.3.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -202,11 +146,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/httpunit/httpunit/1.6.1/httpunit-1.6.1.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/httpunit/httpunit/1.6.1/httpunit-1.6.1.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/httpunit/httpunit/1.6.1/httpunit-1.6.1.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -215,11 +155,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/com/cenqua/clover/clover/1.3.13/clover-1.3.13.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/com/cenqua/clover/clover/1.3.13/clover-1.3.13.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/com/cenqua/clover/clover/1.3.13/clover-1.3.13.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -228,11 +164,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/xerces/xercesImpl/2.6.2/xercesImpl-2.6.2.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/commons-codec/commons-codec/1.2/commons-codec-1.2.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/commons-codec/commons-codec/1.2/commons-codec-1.2.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -241,11 +173,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/commons-codec/commons-codec/1.2/commons-codec-1.2.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/xerces/xercesImpl/2.6.2/xercesImpl-2.6.2.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/xerces/xercesImpl/2.6.2/xercesImpl-2.6.2.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -254,11 +182,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/commons-beanutils/commons-beanutils-core/1.7.0/commons-beanutils-core-1.7.0.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/commons-beanutils/commons-beanutils-core/1.7.0/commons-beanutils-core-1.7.0.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/commons-beanutils/commons-beanutils-core/1.7.0/commons-beanutils-core-1.7.0.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -267,11 +191,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/net/sf/hibernate/hibernate/2.1.8/hibernate-2.1.8.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/net/sf/hibernate/hibernate/2.1.8/hibernate-2.1.8.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/net/sf/hibernate/hibernate/2.1.8/hibernate-2.1.8.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -280,11 +200,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/antlr/antlr/2.7.2/antlr-2.7.2.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/antlr/antlr/2.7.2/antlr-2.7.2.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/antlr/antlr/2.7.2/antlr-2.7.2.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -293,11 +209,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/commons-httpclient/commons-httpclient/3.0.1/commons-httpclient-3.0.1.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/commons-httpclient/commons-httpclient/3.0.1/commons-httpclient-3.0.1.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/commons-httpclient/commons-httpclient/3.0.1/commons-httpclient-3.0.1.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -306,14 +218,21 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-<<<<<<< .mine
-          <root url="jar:///.m2/repository/xerces/xmlParserAPIs/2.2.1/xmlParserAPIs-2.2.1.jar!/" />
-=======
-          <root url="jar:///Users/gluck/.m2/repository/xerces/xmlParserAPIs/2.2.1/xmlParserAPIs-2.2.1.jar!/" />
->>>>>>> .r250
+          <root url="jar://$MAVEN_REPOSITORY_PATH$/xerces/xmlParserAPIs/2.2.1/xmlParserAPIs-2.2.1.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
+      </library>
+    </orderEntry>
+    <orderEntry type="module-library">
+      <library>
+        <CLASSES>
+          <root url="jar://$MODULE_DIR$/tools/jcache-not_released.jar!/" />
+        </CLASSES>
+        <JAVADOC />
+        <SOURCES>
+          <root url="file:///Users/gluck/work/jsr107/ri/src" />
+        </SOURCES>
       </library>
     </orderEntry>
     <orderEntryProperties />
