@@ -315,6 +315,8 @@
     <option name="COPY_FORMS_RUNTIME_TO_OUTPUT" value="true" />
     <option name="DEFAULT_LAYOUT_MANAGER" value="GridLayoutManager" />
   </component>
-  <UsedPathMacros />
+  <UsedPathMacros>
+    <macro name="MAVEN_REPOSITORY_PATH" />
+  </UsedPathMacros>
 </project>
 
