@@ -1,7 +1,8 @@
 $Id: RELEASE_NOTES.txt,v 1.16 2006/03/01 01:52:03 gregluck Exp $
 
-Release Notes For ehcache version 1.2.4RC
-=========================================
+
+Release Notes For ehcache version 1.3
+=====================================
 
 Introduction
 ============
